--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+.home {
+  background-image: linear-gradient(
+    180deg,
+    hsl(240deg 6% 10%) 0%,
+    hsl(240deg 6% 10%) 8%,
+    hsl(240deg 6% 10%) 15%,
+    hsl(240deg 6% 10%) 23%,
+    hsl(240deg 6% 10%) 31%,
+    hsl(240deg 6% 10%) 38%,
+    hsl(240deg 6% 10%) 46%,
+    hsl(240deg 6% 10%) 54%,
+    hsl(240deg 6% 10%) 62%,
+    hsl(252deg 6% 15%) 69%,
+    hsl(282deg 13% 31%) 77%,
+    hsl(319deg 18% 46%) 85%,
+    hsl(351deg 23% 61%) 92%,
+    hsl(25deg 28% 76%) 100%
+  );
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+* {
+  scroll-behavior: smooth;
+  /* small scroll bar */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  /* width */
+  ::-webkit-scrollbar {
+    width: 8px;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
   }
-  to {
-    transform: rotate(360deg);
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
   }
 }
