--- a/src/carousel-3/styles.css
+++ b/src/carousel-3/styles.css
@@ -60,6 +60,14 @@ body {
   );
 }
 
+.next-close {
+  position: relative;
+  right: -143px;
+  top: -15px;
+  width: 0px;
+  height: 60px; /* Adjust the height as needed */
+}
+
 @media (max-width: 768px) {
   .swiper-wrapper3 {
     width: 100vw;
@@ -95,15 +103,15 @@ body {
     position: relative;
     top: 2px;
   }
-  .event_modal{
+  .event_modal {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 41rem;
   }
-  Modal{
+  .modal {
     width: 100%;
   }
-  .event_modal div{
+  .event_modal div {
     width: 100%;
     height: 80%;
     padding: 2px;
