--- a/src/carousel-3/styles.css
+++ b/src/carousel-3/styles.css
@@ -61,14 +61,16 @@ body {
 }
 
 .next-close {
-  position: relative;
-  right: -144px;
-  top: -15px;
-  width: 16px;
-  height: 38px; /* Adjust the height as needed */
+  position: absolute;
+  /* right: -144px; */
+  /* top: -15px; */
+  /* width: 16px; */
+  height: 34px;
+  top: 0px;
+  right: 0px;
 }
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   .swiper-wrapper3 {
     width: 100vw;
     margin: 21px 0px -2px 0;
@@ -107,14 +109,25 @@ body {
     display: flex;
     flex-direction: column;
     height: 47rem;
+    padding: 35px;
   }
   .modal {
     width: 100%;
   }
   .event_modal div {
     width: 100%;
-    height: 80%;
+    height: 60%;
     padding: 2px;
     margin: 0;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .next-close {
+    position: relative;
+    right: -158px;
+    top: -15px;
+    width: 16px;
+    height: 38px; /* Adjust the height as needed */
   }
 }
