--- a/src/carousel-3/styles.css
+++ b/src/carousel-3/styles.css
@@ -120,6 +120,10 @@ body {
     padding: 2px;
     margin: 0;
   }
+  .event_modal div p {
+    font-size: larger;
+    line-height: normal;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
