--- a/src/carousel-3/styles.css
+++ b/src/carousel-3/styles.css
@@ -59,7 +59,21 @@ body {
     rgb(254, 249, 195)
   );
 }
+.swiper-button-prev {
+  color: #ffffff !important;
+}
+.swiper-button-next,
+.swiper-rtl .swiper-button-prev {
+  color: #ffffff !important;
+}
+.swiper-button-prev:hover {
+  color: #a49287 !important;
+}
 
+.swiper-button-next:hover,
+.swiper-rtl .swiper-button-prev:hover {
+  color: #a49287 !important;
+}
 .next-close {
   position: absolute;
 
