--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,24 @@
   );
   box-sizing: border-box;
 }
+/* make it middle and background blur */
+.install-popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
 @media (max-width: 600px) {
   .menu-icon {
     display: block;
